--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Открытая Йога</string>
     <string name="title_activity_maps">Карта</string>
     <string name="clubAvatar">Клуб Аватар</string>
+    <string name="mapButton">Карта</string>
 </resources>
