--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Open Yoga</string>
     <string name="title_activity_maps">Map</string>
     <string name="clubAvatar">Avatar Club</string>
+    <string name="mapButton">Map</string>
 </resources>
